folder/bin/maze4GUI/errors.txt
Monster.java:90: error: attackStrength has private access in Entity
	damageAmount = attackStrength + randGen.nextInt(8);  // add a random component to the attack damage 
	               ^
Monster.java:90: error: randGen has private access in Entity
	damageAmount = attackStrength + randGen.nextInt(8);  // add a random component to the attack damage 
	                                ^
Monster.java:107: error: health has private access in Entity
	System.out.println("Health = " + health); 
	                                 ^
Monster.java:108: error: attackStrength has private access in Entity
	System.out.println("Attack Strength= " + attackStrength);
	                                         ^
Monster.java:109: error: hasKey has private access in Entity
	System.out.println("Has key = " + hasKey);
	                                  ^
Monster.java:110: error: position has private access in Entity
	System.out.println("Position = " + position.toString());  
	                                   ^
6 errors
